# obsidian-capture

./: .gitignore  README.md  RELEASING.md  acceptance_test.py  config.sample.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
scripts/: create-new-feature.sh
src/obsidian_capture/: __init__.py  capture.py  cli.py  config.py  convert.py  errors.py  exclude.py  extract.py  fetch.py  logging.py  metadata.py  naming.py  report.py  timing.py  write.py
tests/: __init__.py
tests/integration/: test_exclusion_basic.py  test_exclusion_compound.py  test_exclusion_empty_primary.py  test_exclusion_high_removal.py  test_exclusion_invalid.py  test_exclusion_nested.py  test_exclusion_protected.py
tests/unit/: test_config.py  test_convert.py  test_exclusion_cap.py  test_exclusion_empty_content.py  test_exclusion_logging.py  test_exclusion_summary.py  test_exclusion_thresholds.py  test_exclusion_validation.py  test_extract.py  test_metadata.py  test_naming.py
